Ignore node_modules

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ wp-content/uploads
 wp-content/updraft
 wp-migrate-db-pro-compatibility.php
 wp-config-sample.php
+wp-content/themes/decimaltenths/node_modules
