--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ wp-content/updraft
 wp-migrate-db-pro-compatibility.php
 wp-config-sample.php
 wp-content/themes/decimaltenths/node_modules
+wp-content/themes/decimaltenths/dist
