--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ wp-migrate-db-pro-compatibility.php
 wp-config-sample.php
 wp-content/themes/decimaltenths/node_modules
 wp-content/themes/decimaltenths/dist
+.htaccess
